--- a/style.css
+++ b/style.css
@@ -534,6 +534,7 @@ a[data-lightbox] {
     position: relative;
     display: block;
     text-align: center;
+    margin-left: 80px;
 }
 
 a[data-lightbox]:hover::before {
@@ -550,6 +551,7 @@ a[data-lightbox]:hover::before {
     z-index: 1;
     position: absolute;
     top: 50%;
+    left: 40%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
 }
@@ -680,10 +682,10 @@ p {
     font-size: 11px;
 }
 
-.tight-width-whitespace {
+/* .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
-}
+} */
 
 .h1 {
     font-size: 20px;
