fixed accessibility problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,15 +773,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #F3976C;
+  background-color: #f3814c;
 }
 
 .tc-white {
-  color: #F3976C !important;
+  color: #f3814c !important;
 }
 
 .btn-atomic-tangerine {
-  background: #F3976C;
+  background: #f3814c;
   color: #FFFFFF !important;
 }
 
