--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-  font-size: 32px;
+  font-size: 35px;
+  font-weight: bold;
 }
 
 .navbar {
@@ -400,7 +401,7 @@ button {
 }
 
 .icon-lg {
-  font-size: 60px !important;
+  font-size: 80px !important;
 }
 
 .sm-shadow {
@@ -605,7 +606,25 @@ a {
 }
 
 p {
-  font-size: 11px;
+  font-size: 18px;
+}
+
+.titre {
+  font-size: 25px;
+  margin-top: 15px;
+  padding: 20px;
+  font-weight: bold;
+  color: black !important;
+}
+
+.titre-xs {
+  font-size: 25px;
+  font-weight: bold;
+  color: black !important;
+}
+
+.p-xs {
+  font-size: 18px;
 }
 
 /* .tight-width-whitespace {
@@ -618,7 +637,7 @@ p {
 }
 
 .cta-hero {
-  margin-top: 22px;
+  margin-top: 70px;
   color: #FFFFFF !important;
   text-transform: uppercase;
   padding: 12px 28px 12px 28px;
@@ -661,7 +680,7 @@ h4 {
 }
 
 .white {
-  color: #FFFFFF !important;
+  color: #FFF !important;
 }
 
 .portfolio-thumb {
@@ -679,7 +698,7 @@ h4 {
 }
 
 .black-background {
-  background-color: rgba(165, 147, 99, 0.7);
+  background-color: #0a0000;
   padding: 40px 40px 40px 40px;
 }
 
@@ -697,16 +716,22 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #F3976C;
+  background-color: #fa5509;
 }
 
 .tc-white {
-  color: #F3976C !important;
+  color: #fa5509 !important;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.tc-white h3 {
+  font-weight: bold;
 }
 
 .btn-atomic-tangerine {
-  background: #F3976C;
-  color: #FFFFFF !important;
+  background: #fa5509;
+  color: #0a0000 !important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -723,7 +748,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-  color: #F3976C !important;
+  color: #f3814c !important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -733,6 +758,19 @@ h4 {
 .icon-dark-slate-blue {
   color: #364577 !important;
   border-color: #364577 !important;
+}
+
+.black {
+  color: #0c0000 !important;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.black-footer {
+  color: #0c0000 !important;
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 15px;
 }
 
 .bg-dots-bg {
@@ -996,6 +1034,15 @@ h4 {
     width: 180px;
     height: 320px;
   }
+}
+
+.opacity-bg {
+  background-color: #333;
+  opacity: 0.8;
+}
+
+.btn-contact {
+  margin-bottom: 50px;
 }
 
 @media (max-width: 400px) {
