--- a/style.css
+++ b/style.css
@@ -169,11 +169,6 @@ a:hover {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.d-bloc .panel button:hover,
-.l-bloc button:hover {
-  color: rgba(0, 0, 0, 0.7);
-}
-
 .l-bloc .icon-round,
 .l-bloc .icon-square,
 .l-bloc .icon-rounded,
@@ -277,7 +272,7 @@ a:hover {
 }
 
 .navbar .nav {
-  padding-top: 2px;
+  padding-top: 10px;
   margin-right: -16px;
   float: right;
   z-index: 1;
@@ -367,6 +362,22 @@ nav .caret {
 
 .btn {
   margin: 0 5px 5px 0;
+}
+
+.btn-page2 {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
 }
 
 .btn.pull-right {
@@ -474,14 +485,14 @@ a[data-lightbox]:hover::before {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 a[data-lightbox]:hover img {
   opacity: 0.6;
   -webkit-animation-fill-mode: none;
-  animation-fill-mode: none;
+          animation-fill-mode: none;
 }
 
 #lightbox-modal {
@@ -580,7 +591,7 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
+  color: #575757;
 }
 
 .container {
@@ -711,21 +722,18 @@ h4 {
   background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
-  background-color: #364577;
+.bgc-atomic-tangerine {
+  background-color: #fa5509;
 }
 
-.bgc-atomic-tangerine {
+.bgc-atomic-tangerine-2 {
+  margin-top: 30px;
   background-color: #fa5509;
 }
 
 .tc-white {
   color: #fa5509 !important;
   margin-top: 20px;
-  font-weight: bold;
-}
-
-.tc-white h3 {
   font-weight: bold;
 }
 
@@ -756,8 +764,8 @@ h4 {
 }
 
 .icon-dark-slate-blue {
-  color: #364577 !important;
-  border-color: #364577 !important;
+  color: #364577;
+  border-color: #364577;
 }
 
 .black {
@@ -803,6 +811,16 @@ h4 {
   }
 }
 
+@media (max-width: 400px) {
+  .bloc {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .bg-banniere {
+    background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+  }
+}
+
 @media (max-width: 992px) and (min-width: 768px) {
   .navbar .nav {
     max-width: 80%;
@@ -812,54 +830,19 @@ h4 {
   }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   .b-parallax {
     background-attachment: scroll;
   }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-  .b-parallax {
-    background-attachment: scroll;
-  }
-}
-
-@media (max-width: 991px) {
-  .container {
-    width: 100%;
-  }
-  .b-parallax {
-    background-attachment: scroll;
-  }
-  .page-container,
-  #hero-bloc {
-    overflow-x: hidden;
-    position: relative;
-  }
-  .bloc {
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
-  }
-  .bloc-group,
-  .bloc-group .bloc {
-    display: block;
-    width: 100%;
-  }
-  .bloc-fill-screen .fill-bloc-top-edge,
-  .bloc-fill-screen .fill-bloc-bottom-edge {
-    padding: 0 20px;
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
-  }
-}
-
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (min-width: 768px) {
   .site-navigation {
     position: absolute;
     top: 50%;
     right: 20px;
-    transform: translate(0, -50%);
-    -webkit-transform: translateY(-50%);
+    -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
   }
   .nav > li .dropdown-menu a,
   .nav > li .dropdown-menu a:hover {
@@ -892,9 +875,6 @@ h4 {
     float: none;
     margin: 10px auto 0;
   }
-}
-
-@media (max-width: 767px) {
   .page-container {
     overflow-x: hidden;
     position: relative;
@@ -924,9 +904,8 @@ h4 {
   }
   .site-navigation {
     position: inherit;
-    transform: none;
     -webkit-transform: none;
-    -ms-transform: none;
+            transform: none;
   }
   .nav > li {
     margin-top: 0;
@@ -964,7 +943,7 @@ h4 {
     padding: 0;
     overflow-x: hidden;
     -webkit-box-shadow: none;
-    box-shadow: none;
+            box-shadow: none;
   }
   .navbar-brand img {
     max-height: 40px;
@@ -1034,6 +1013,41 @@ h4 {
     width: 180px;
     height: 320px;
   }
+  .bloc-mob-center-text {
+    text-align: center;
+  }
+  .bg-banniere {
+    background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
+  .b-parallax {
+    background-attachment: scroll;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    width: 100%;
+  }
+  .b-parallax {
+    background-attachment: scroll;
+  }
+  .page-container,
+  #hero-bloc {
+    overflow-x: hidden;
+    position: relative;
+  }
+  .bloc-group,
+  .bloc-group .bloc {
+    display: block;
+    width: 100%;
+  }
+  .bloc-fill-screen .fill-bloc-top-edge,
+  .bloc-fill-screen .fill-bloc-bottom-edge {
+    padding: 0 20px;
+  }
 }
 
 .opacity-bg {
@@ -1045,22 +1059,40 @@ h4 {
   margin-bottom: 50px;
 }
 
-@media (max-width: 400px) {
-  .bloc {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .bg-banniere {
-    background-image: url(img/la-chouette-agence-banniere-xs.jpg);
-  }
+.btn-contact-cta-hero {
+  margin-top: 20px;
+  color: #FFFFFF !important;
+  text-transform: uppercase;
+  padding: 12px 28px 12px 28px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
-@media (max-width: 767px) {
-  .bloc-mob-center-text {
-    text-align: center;
-  }
-  .bg-banniere {
-    background-image: url(img/la-chouette-agence-banniere-xs.jpg);
-  }
+.text-danger {
+  color: #dc3545 !important;
+}
+
+.btn-page-2 {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+}
+
+.scrollToTop {
+  color: #FFF;
 }
 /*# sourceMappingURL=style.css.map */
