--- a/style.scss
+++ b/style.scss
@@ -26,33 +26,8 @@ a:hover {
 }
 
 .bloc {
-    // width: 100%;
-    // clear: both;
-    // background: 50% 50% no-repeat;
-    // padding: 0 50px;
-    // -webkit-background-size: cover;
-    // -moz-background-size: cover;
-    // -o-background-size: cover;
-    // background-size: cover;
     position: relative;
 }
-
-// .bloc .container {
-//     padding-left: 0;
-//     padding-right: 0;
-// }
-
-// .bloc-lg {
-//     padding: 100px 50px;
-// }
-
-// .bloc-md {
-//     padding: 50px;
-// }
-
-// .bloc-sm {
-//     padding: 20px 50px;
-// }
 
 .bg-center,
 .bg-l-edge,
@@ -64,9 +39,7 @@ a:hover {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
+
     background-size: auto!important;
 }
 
@@ -196,10 +169,6 @@ a:hover {
     color: rgba(0, 0, 0, .5);
 }
 
-.d-bloc .panel button:hover,
-.l-bloc button:hover {
-    color: rgba(0, 0, 0, .7);
-}
 
 .l-bloc .icon-round,
 .l-bloc .icon-square,
@@ -270,16 +239,6 @@ a:hover {
     margin-top: 80px;
 }
 
-// .row-no-gutters {
-//     margin-right: 0;
-//     margin-left: 0;
-// }
-
-// .row.row-no-gutters > [class^="col-"],
-// .row.row-no-gutters > [class*=" col-"] {
-//     padding-right: 0;
-//     padding-left: 0;
-// }
 
 #bloc-1-hero h1 {
     font-size: 35px;
@@ -315,7 +274,7 @@ a:hover {
 }
 
 .navbar .nav {
-    padding-top: 2px;
+    padding-top: 10px;
     margin-right: -16px;
     float: right;
     z-index: 1;
@@ -408,6 +367,19 @@ nav .caret {
 
 .btn {
     margin: 0 5px 5px 0;
+}
+
+.btn-page2{
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .btn.pull-right {
@@ -514,12 +486,10 @@ a[data-lightbox]:hover::before {
     top: 50%;
     left: 50%;
     transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
 }
 
 a[data-lightbox]:hover img {
     opacity: 0.6;
-    -webkit-animation-fill-mode: none;
     animation-fill-mode: none;
 }
 
@@ -614,7 +584,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 
 .container {
@@ -744,355 +714,375 @@ h4 {
     background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
 
-.bgc-atomic-tangerine {
-    background-color: #fa5509;
-}
-
-.tc-white {
-    color: #fa5509!important;
-    margin-top: 20px;
-    font-weight: bold;
-   h3{
-        font-weight: bold;
-    }
-}
-
-.btn-atomic-tangerine {
-    background: #fa5509;
-    color: rgb(10, 0, 0)!important;
-}
-
-.btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
-}
-
-.ltc-white {
-    color: #FFFFFF!important;
-}
-
-.ltc-white:hover {
-    color: #cccccc!important;
-}
-
-.ltc-atomic-tangerine {
-    color: #f3814c!important;
-}
-
-.ltc-atomic-tangerine:hover {
-    color: #c27956!important;
-}
-
-.icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
-}
-
-
-.black {
-    color: rgb(12, 0, 0)!important;
-    font-weight: bold;
-    font-size: 20px;
-}
-.black-footer{
-    color: rgb(12, 0, 0)!important;
-    font-weight: bold;
-    font-size: 15px;
-    margin-bottom: 15px;
-}
-
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
-}
-
-.bg-banniere {
-    background-image: url(img/la-chouette-agence-banniere.jpg);
-}
-
-.bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
-}
-
-@media (max-width: 1024px) {
-    .bloc {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    .bloc.full-width-bloc,
-    .bloc-tile-2.full-width-bloc .container,
-    .bloc-tile-3.full-width-bloc .container,
-    .bloc-tile-4.full-width-bloc .container {
-        padding-left: 0;
-        padding-right: 0;
+    .bgc-atomic-tangerine {
+        background-color: #fa5509;
     }
 
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-    .navbar .nav {
-        max-width: 80%
-    }
-    .nav-center.navbar .nav {
-        max-width: 100%
-    }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
-@media (max-width: 991px) {
-    .container {
-        width: 100%;
-    }
-    .b-parallax {
-        background-attachment: scroll;
-    }
-    .page-container,
-    #hero-bloc {
-        overflow-x: hidden;
-        position: relative;
-    }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-    .bloc-group,
-    .bloc-group .bloc {
-        display: block;
-        width: 100%;
-    }
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-}
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center .navbar-header {
-        width: 100%;
-    }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
-}
-
-@media (max-width: 767px) {
-    .page-container {
-        overflow-x: hidden;
-        position: relative;
-    }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    #disqus_thread {
-        padding-left: 10px!important;
-        padding-right: 10px!important;
-    }
-    .b-parallax {
-        background-attachment: scroll;
-    }
-    .navbar .nav {
-        padding-top: 0;
-        border-top: 1px solid rgba(0, 0, 0, .2);
-        float: none!important;
-    }
-    .navbar.row {
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .site-navigation {
-        position: inherit;
-        transform: none;
-        -webkit-transform: none;
-        -ms-transform: none;
-    }
-    .nav > li {
-        margin-top: 0;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        background: rgba(0, 0, 0, .05);
-        text-align: left;
-        padding-left: 15px;
-        width: 100%;
-    }
-    .nav > li:hover {
-        background: rgba(0, 0, 0, .08);
-    }
-    .dropdown .dropdown a .caret {
-        float: none;
-        margin: 5px 0 0 10px!important;
-        border: 4px solid black;
-        border-bottom-color: transparent;
-        border-right-color: transparent;
-        border-left-color: transparent;
-    }
-    #hero-bloc .navbar .nav {
-        background: rgba(0, 0, 0, .8);
-    }
-    #hero-bloc .navbar .nav a {
-        color: rgba(255, 255, 255, .6);
-    }
-    .hero {
-        padding: 50px 0;
-    }
-    .hero-nav {
-        left: -1px;
-        right: -1px;
-    }
-    .navbar-collapse {
-        padding: 0;
-        overflow-x: hidden;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-    .navbar-brand img {
-        max-height: 40px;
-        width: auto;
-    }
-    .nav-invert .navbar-header {
-        float: none;
-        width: 100%;
-    }
-    .nav-invert .navbar-toggle {
-        float: left;
-        margin-left: 10px;
-    }
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bloc-xxl,
-    .bloc-xl,
-    .bloc-lg {
-        padding: 40px 0;
-    }
-    .bloc-sm,
-    .bloc-md {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bloc-tile-2 .container,
-    .bloc-tile-3 .container,
-    .bloc-tile-4 .container,
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bg-banniere {
-        background-image: url(img/la-chouette-agence-banniere-xs.jpg);
-    }
-    .a-block {
-        padding: 0 10px;
-    }
-    .btn-dwn {
-        display: none;
-    }
-    .voffset {
-        margin-top: 5px;
-    }
-    .voffset-md {
-        margin-top: 20px;
-    }
-    .voffset-lg {
+    .bgc-atomic-tangerine-2{
         margin-top: 30px;
+        background-color: #fa5509;
     }
-    form {
-        padding: 5px;
+
+    .tc-white {
+        color: #fa5509!important;
+        margin-top: 20px;
+        font-weight: bold;
+
     }
-    .close-lightbox {
+    .btn-atomic-tangerine {
+        background: #fa5509;
+        color: rgb(10, 0, 0)!important;
+    }
+
+    .btn-atomic-tangerine:hover {
+        background: #c27956!important;
+        color: #FFFFFF!important;
+    }
+
+    .ltc-white {
+        color: #FFFFFF!important;
+    }
+
+    .ltc-white:hover {
+        color: #cccccc!important;
+    }
+
+    .ltc-atomic-tangerine {
+        color: #f3814c!important;
+    }
+
+    .ltc-atomic-tangerine:hover {
+        color: #c27956!important;
+    }
+
+    .icon-dark-slate-blue {
+        color: #364577;
+        border-color: #364577;
+    }
+
+
+    .black {
+        color: rgb(12, 0, 0)!important;
+        font-weight: bold;
+        font-size: 20px;
+    }
+    .black-footer{
+        color: rgb(12, 0, 0)!important;
+        font-weight: bold;
+        font-size: 15px;
+        margin-bottom: 15px;
+    }
+
+    .bg-dots-bg {
+        background-image: url("img/dots-bg.png");
+    }
+
+    .bg-lines-h2-bg {
+        background-image: url("img/lines-h2-bg.png");
+    }
+
+    .bg-banniere {
+        background-image: url(img/la-chouette-agence-banniere.jpg);
+    }
+
+    .bg-presentation {
+        background-image: url("img/image-de-presentation.jpg");
+    }
+
+    @media (max-width: 1024px) {
+        .bloc {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .bloc.full-width-bloc,
+        .bloc-tile-2.full-width-bloc .container,
+        .bloc-tile-3.full-width-bloc .container,
+        .bloc-tile-4.full-width-bloc .container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+    }
+
+    @media (max-width: 400px) {
+        .bloc {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .bg-banniere {
+            background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+        }
+    }
+
+    @media (max-width: 992px) and (min-width: 768px) {
+        .navbar .nav {
+            max-width: 80%
+        }
+        .nav-center.navbar .nav {
+            max-width: 100%
+        }
+    }
+
+    @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+        .b-parallax {
+            background-attachment: scroll;
+        }
+        @media (min-width: 768px) {
+            .site-navigation {
+                position: absolute;
+                top: 50%;
+                right: 20px;
+                transform: translate(0, -50%);
+            }
+            .nav > li .dropdown-menu a,
+            .nav > li .dropdown-menu a:hover {
+                color: #484848;
+            }
+            .nav-invert .site-navigation {
+                left: 0;
+                right: 0;
+            }
+            .nav-center {
+                text-align: center;
+            }
+            .nav-center .navbar-header {
+                width: 100%;
+            }
+            .nav-center .navbar-header,
+            .nav-center .navbar-brand,
+            .nav-center .nav > li {
+                float: none;
+                display: inline-block;
+            }
+            .nav-center .site-navigation {
+                position: relative;
+                width: 100%;
+                right: 0;
+                margin-right: 0px;
+                margin-top: 20px;
+            }
+            .nav-center.mini-nav .navbar-toggle {
+                float: none;
+                margin: 10px auto 0;
+            }
+            .page-container {
+                overflow-x: hidden;
+                position: relative;
+            }
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6,
+            p,
+            #disqus_thread {
+                padding-left: 10px!important;
+                padding-right: 10px!important;
+            }
+            .b-parallax {
+                background-attachment: scroll;
+            }
+            .navbar .nav {
+                padding-top: 0;
+                border-top: 1px solid rgba(0, 0, 0, .2);
+                float: none!important;
+            }
+            .navbar.row {
+                margin-left: 0;
+                margin-right: 0;
+            }
+            .site-navigation {
+                position: inherit;
+                transform: none;
+            }
+            .nav > li {
+                margin-top: 0;
+                border-bottom: 1px solid rgba(0, 0, 0, .1);
+                background: rgba(0, 0, 0, .05);
+                text-align: left;
+                padding-left: 15px;
+                width: 100%;
+            }
+            .nav > li:hover {
+                background: rgba(0, 0, 0, .08);
+            }
+            .dropdown .dropdown a .caret {
+                float: none;
+                margin: 5px 0 0 10px!important;
+                border: 4px solid black;
+                border-bottom-color: transparent;
+                border-right-color: transparent;
+                border-left-color: transparent;
+            }
+            #hero-bloc .navbar .nav {
+                background: rgba(0, 0, 0, .8);
+            }
+            #hero-bloc .navbar .nav a {
+                color: rgba(255, 255, 255, .6);
+            }
+            .hero {
+                padding: 50px 0;
+            }
+            .hero-nav {
+                left: -1px;
+                right: -1px;
+            }
+            .navbar-collapse {
+                padding: 0;
+                overflow-x: hidden;
+                box-shadow: none;
+            }
+            .navbar-brand img {
+                max-height: 40px;
+                width: auto;
+            }
+            .nav-invert .navbar-header {
+                float: none;
+                width: 100%;
+            }
+            .nav-invert .navbar-toggle {
+                float: left;
+                margin-left: 10px;
+            }
+            .bloc {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            .bloc-xxl,
+            .bloc-xl,
+            .bloc-lg {
+                padding: 40px 0;
+            }
+            .bloc-sm,
+            .bloc-md {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            .bloc-tile-2 .container,
+            .bloc-tile-3 .container,
+            .bloc-tile-4 .container,
+            .bloc-fill-screen .fill-bloc-top-edge,
+            .bloc-fill-screen .fill-bloc-bottom-edge {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            .bg-banniere {
+                background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+            }
+            .a-block {
+                padding: 0 10px;
+            }
+            .btn-dwn {
+                display: none;
+            }
+            .voffset {
+                margin-top: 5px;
+            }
+            .voffset-md {
+                margin-top: 20px;
+            }
+            .voffset-lg {
+                margin-top: 30px;
+            }
+            form {
+                padding: 5px;
+            }
+            .close-lightbox {
+                display: inline-block;
+            }
+            .blocsapp-device-iphone5 {
+                background-size: 216px 425px;
+                padding-top: 60px;
+                width: 216px;
+                height: 425px;
+            }
+            .blocsapp-device-iphone5 img {
+                width: 180px;
+                height: 320px;
+            }
+            .bloc-mob-center-text {
+                text-align: center;
+            }
+            .bg-banniere {
+                background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+            }
+        }
+    }
+
+    @media only screen and (min-width: 1024px) and (max-width: 1366px){
+        .b-parallax {
+            background-attachment: scroll;
+        }
+    }
+
+    @media (max-width: 991px) {
+        .container {
+            width: 100%;
+        }
+        .b-parallax {
+            background-attachment: scroll;
+        }
+        .page-container,
+        #hero-bloc {
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        .bloc-group,
+        .bloc-group .bloc {
+            display: block;
+            width: 100%;
+        }
+        .bloc-fill-screen .fill-bloc-top-edge,
+        .bloc-fill-screen .fill-bloc-bottom-edge {
+            padding: 0 20px;
+
+        }
+    }
+
+
+
+
+    .opacity-bg {
+        background-color: #333;
+        opacity: 0.8;
+    }
+
+    .btn-contact {
+        margin-bottom: 50px;
+    }
+
+    .btn-contact-cta-hero {
+        margin-top: 20px;
+        color: #FFFFFF !important;
+        text-transform: uppercase;
+        padding: 12px 28px 12px 28px;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .text-danger {
+        color: #dc3545!important;
+    }
+
+
+
+    .btn-page-2 {
         display: inline-block;
-    }
-    .blocsapp-device-iphone5 {
-        background-size: 216px 425px;
-        padding-top: 60px;
-        width: 216px;
-        height: 425px;
-    }
-    .blocsapp-device-iphone5 img {
-        width: 180px;
-        height: 320px;
-    }
-}
-
-
-.opacity-bg {
-    background-color: #333;
-    opacity: 0.8;
-}
-
-.btn-contact {
-    margin-bottom: 50px;
-}
-
-@media (max-width: 400px) {
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bg-banniere {
-        background-image: url(img/la-chouette-agence-banniere-xs.jpg);
-    }
-}
-
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
+        font-weight: 400;
         text-align: center;
+        vertical-align: middle;
+        user-select: none;
+        border: 1px solid transparent;
+        padding: .375rem .75rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        border-radius: .25rem;
+        transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
-    .bg-banniere {
-        background-image: url(img/la-chouette-agence-banniere-xs.jpg);
+
+    .scrollToTop{
+        color: #FFF;
     }
-}
